# boothrflow

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  DECISIONS.md  LICENSE  NOTICE  PLAN.md  README.md  ROADMAP.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: windows-port.md
docs/benchmarks/: wave-6-phase-1-2026-05-21.md
docs/research/: model-survey-2026-05.md
docs/uat/: p1-w1.md  p1-w2.md  p1-w3.md  p2-w4.md  p3-w7-w8.md  wave-3-followup.md  wave-3.md  wave-4a.md  wave-5-checklist.md  wave-5.md
docs/waves/: wave-2-speed-and-pill.md  wave-3-mac-port.md  wave-4b-settings-panel.md  wave-5-context-aware-cleanup.md  wave-6-engine-and-formatting.md  wave-6-production-polish.md  wave-7-production-polish.md  wave-7-streaming-stt.md  wave-8-connectors-ui-privacy.md
scripts/: cargo-msvc.bat  download-llm.bat  download-model.bat  download-model.sh  parakeet-propagate-metadata.py
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  clippy.toml  deny.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: audio_meter.rs  bench_replay.rs  export_bindings.rs  nemotron_probe.rs  parakeet_probe.rs
src-tauri/fixtures/audio/: ATTRIBUTION.md
src-tauri/icons/: .gitkeep
src-tauri/src/: app_settings.rs  bench.rs  captures.rs  commands.rs  error.rs  lib.rs  main.rs  ocr.rs  overlay.rs  pipeline.rs  quickpaste.rs  session.rs  settings.rs  tray.rs
src-tauri/src/audio/: cpal_source.rs  fake.rs  mod.rs
src-tauri/src/context/: fake.rs  mod.rs  real.rs
src-tauri/src/history/: mod.rs
src-tauri/src/history/real/: embed.rs  search.rs  store.rs
src-tauri/src/hotkey/: fake.rs  global.rs  mod.rs
src-tauri/src/injector/: clipboard.rs  fake.rs  mod.rs  typing.rs
src-tauri/src/learning/: coordinator.rs  fake.rs  macos.rs  mod.rs
src-tauri/src/llm/: fake.rs  llama.rs  mod.rs  openai_compat.rs  prompt.rs
src-tauri/src/ocr/: macos.rs  mod.rs
src-tauri/src/settings/: secrets.rs
src-tauri/src/stt/: fake.rs  mod.rs  nemotron.rs  online_transducer.rs  parakeet.rs  streaming.rs  whisper.rs
src-tauri/src/vad/: endpoint.rs  fake.rs  mod.rs  silero.rs
src-tauri/tests/: pipeline_e2e.rs  properties.rs
src/lib/components/: Icon.svelte  ListenPill.svelte  Settings.svelte
src/lib/ipc/: .gitkeep  bindings.ts
src/lib/quickpaste/: QuickPasteApp.svelte
src/lib/services/: dictation.test.ts  dictation.ts  platform.ts  styles.test.ts  styles.ts  word-diff.test.ts  word-diff.ts
src/lib/state/: dictation.svelte.ts  quickpaste.svelte.ts  settings.svelte.ts
src/lib/test/: tauri-mocks.ts
