[package]
name = "boothrflow"
version = "0.0.0"
description = "Local-first voice dictation"
authors = ["Eric Boothe and boothrflow contributors"]
license = "Apache-2.0"
repository = "https://github.com/ericboothe/boothrflow"
edition = "2021"
rust-version = "1.82"
default-run = "boothrflow"

[lib]
# `_lib` suffix is necessary to avoid a name collision with the bin on Windows.
# https://github.com/rust-lang/cargo/issues/8519
name = "boothrflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "boothrflow"
path = "src/main.rs"

[[example]]
name = "audio_meter"
required-features = ["real-engines"]

# ──────────────────────────────────────────────────────────────────────────
# Features
#
#   default       – test-fakes, so `cargo build` is fast for the inner loop
#   test-fakes    – swap real engine impls for canned fakes (no whisper / no llama)
#   real-engines  – pull in the heavy STT/LLM stack (Phase 1+ wires actual deps)
#   win32-headed  – run Win32 smoke tests that need a real desktop session
# ──────────────────────────────────────────────────────────────────────────
[features]
default = ["test-fakes"]
test-fakes = []
real-engines = ["dep:cpal", "dep:rubato", "dep:hound", "dep:rdev"]
win32-headed = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri shell
tauri = { version = "2", features = [
  "tray-icon",
  "macos-private-api",
  "image-png",
] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

# Specta — the `Type` derive only. The full tauri-specta integration
# (typed commands + auto-generated TS bindings) lands in Phase 1 W3
# when we have enough commands to make it worthwhile.
specta = { version = "=2.0.0-rc.22", features = ["derive"] }

# Foundations
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"

# ──────────────────────────────────────────────────────────────────────────
# Heavy deps gated to `real-engines`. Off by default so the inner-loop
# `cargo check --no-default-features --features test-fakes` stays fast.
# Phase 1 W1 wires audio + hotkey; W2 wires VAD + STT; W3 wires injector.
# ──────────────────────────────────────────────────────────────────────────

# Audio (P1 W1)
cpal = { version = "0.16", optional = true }
rubato = { version = "0.16", optional = true }
hound = { version = "3.5", optional = true }

# Hotkey (P1 W1)
rdev = { git = "https://github.com/rustdesk-org/rdev", optional = true }

# VAD (P1 W2) — uncomment when wiring
# voice_activity_detector = { version = "0.2", optional = true }

# STT (P1 W2) — uncomment when wiring
# whisper-rs = { version = "0.13", optional = true }

# LLM (P2)
# llama-cpp-2 = { version = "0.1", optional = true }

# Embeddings + history (P3)
# rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# rusqlite_migration = { version = "2", optional = true }
# fastembed = { version = "4", optional = true }

# Injector (P1 W3)
# enigo = { version = "0.6", optional = true }
# arboard = { version = "3", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation",
] }

[dev-dependencies]
mockall = "0.13"
proptest = "1.6"
insta = { version = "1.46", features = ["yaml", "redactions"] }
rstest = "0.23"
tempfile = "3"
serial_test = "3"
approx = "0.5"
assert_matches = "1.5"
