[package]
name = "boothrflow"
version = "0.0.0"
description = "Local-first voice dictation"
authors = ["Eric Boothe and boothrflow contributors"]
license = "Apache-2.0"
repository = "https://github.com/ebootheee/boothrflow"
edition = "2021"
rust-version = "1.82"
default-run = "boothrflow"

[lib]
# `_lib` suffix is necessary to avoid a name collision with the bin on Windows.
# https://github.com/rust-lang/cargo/issues/8519
name = "boothrflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "boothrflow"
path = "src/main.rs"

[[example]]
name = "audio_meter"
required-features = ["real-engines"]

# Regenerates `src/lib/ipc/bindings.ts` from the current set of
# `#[tauri::command]` handlers via tauri-specta. Run via the package.json
# `pnpm gen` script, or directly: `cargo run --example export_bindings
# --features real-engines`. Only the command list shape matters — no
# runtime / no Tauri builder required.
[[example]]
name = "export_bindings"

# ──────────────────────────────────────────────────────────────────────────
# Features
#
#   default       – test-fakes, so `cargo build` is fast for the inner loop
#   test-fakes    – swap real engine impls for canned fakes (no whisper / no llama)
#   real-engines  – pull in the heavy STT/LLM stack (Phase 1+ wires actual deps)
#   win32-headed  – run Win32 smoke tests that need a real desktop session
# ──────────────────────────────────────────────────────────────────────────
[features]
# Both fakes and real-engines on by default so `tauri dev` builds the
# full pipeline. The fakes-only fast inner loop is opt-in via:
#   cargo nextest run --no-default-features --features test-fakes
# Tauri-cli passes `--no-default-features --features <defaults>` and
# enumerates them, so leaving real-engines out of `default` would mean
# `tauri dev` builds the gutted spine.
default = ["test-fakes", "real-engines"]
test-fakes = []
real-engines = [
  "dep:cpal",
  "dep:rubato",
  "dep:hound",
  "dep:rdev",
  "dep:voice_activity_detector",
  "dep:whisper-rs",
  "dep:dirs",
  "dep:enigo",
  "dep:arboard",
  "dep:reqwest",
  "dep:rusqlite",
  "dep:rusqlite_migration",
  "dep:chrono",
]
# Off by default — pulls a sizable C++ sherpa-onnx binary download +
# the ONNX runtime. Opt in with `--features parakeet-engine` once the
# user has run `pnpm download:model:mac parakeet`.
parakeet-engine = ["dep:sherpa-rs"]
win32-headed = []

# ──────────────────────────────────────────────────────────────────────────
# GPU backends for Whisper. Pick one per build; CPU-only is the safe default.
# These forward to the matching whisper-rs / whisper.cpp backend feature.
#
#   gpu-vulkan – Windows/Linux portable GPU (NVIDIA/AMD/Intel). Requires the
#                Vulkan SDK at build time (VULKAN_SDK env var) and a Vulkan
#                loader at runtime (ships with every modern GPU driver).
#   gpu-cuda   – Windows/Linux NVIDIA-only. Requires CUDA toolkit at build.
#                Fastest path on NVIDIA cards but ties the binary to CUDA libs.
#   gpu-metal  – macOS only (lands in Wave 3). No SDK install needed; built
#                into the system. Auto-uses ANE on Apple Silicon when available.
#
# Build example (Windows + Vulkan):
#   scripts\cargo-msvc.bat cargo build --release \
#     --features "real-engines gpu-vulkan"
#
# These are NOT in `default` because they require an SDK; the default build
# stays self-contained and runs CPU-only Whisper.
# ──────────────────────────────────────────────────────────────────────────
gpu-vulkan = ["whisper-rs?/vulkan"]
gpu-cuda = ["whisper-rs?/cuda"]
gpu-metal = ["whisper-rs?/metal"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri shell
tauri = { version = "2", features = [
  "tray-icon",
  "macos-private-api",
  "image-png",
] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

# Specta + tauri-specta — typed Rust → TypeScript bindings for every
# `#[tauri::command]`. Replaces the manual TS mirror types we kept in
# `src/lib/state/settings.svelte.ts`. Bindings auto-generated to
# `src/lib/ipc/bindings.ts` on `cargo build` in debug mode (see
# `lib.rs::run`). See ADR-007.
specta = { version = "2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }

# Foundations
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"

# OS keychain for API keys. Soft-fails on platforms without a backend
# (Linux without `secret-service`, headless CI). When unavailable, we
# fall back to writing the key into the `tauri-plugin-store` JSON, with
# a warning logged on first use. Apple Keychain on macOS, Credential
# Locker on Windows, libsecret on Linux.
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }

# ──────────────────────────────────────────────────────────────────────────
# Heavy deps gated to `real-engines`. Off by default so the inner-loop
# `cargo check --no-default-features --features test-fakes` stays fast.
# Phase 1 W1 wires audio + hotkey; W2 wires VAD + STT; W3 wires injector.
# ──────────────────────────────────────────────────────────────────────────

# Audio (P1 W1)
cpal = { version = "0.16", optional = true }
rubato = { version = "0.16", optional = true }
hound = { version = "3.5", optional = true }

# Hotkey (P1 W1)
rdev = { git = "https://github.com/rustdesk-org/rdev", optional = true }

# VAD (P1 W2)
voice_activity_detector = { version = "0.2", optional = true }

# STT (P1 W2)
whisper-rs = { version = "0.16", optional = true }
dirs = { version = "5", optional = true }

# STT (Wave 5c) — Parakeet TDT 0.6B v3 via sherpa-onnx. Off by default;
# opted in via `parakeet-engine` feature so a baseline build doesn't
# download the ~150MB sherpa-onnx prebuilt + ONNX runtime archive.
# `download-binaries` skips the cmake build by fetching a prebuilt
# binary; gracefully falls back to source build when the prebuilt
# isn't available for the target.
sherpa-rs = { version = "0.6", optional = true, default-features = false, features = ["download-binaries"] }

# LLM (P2 W4) — out-of-process via OpenAI-compatible HTTP API.
# In-process llama-cpp-2 was attempted but conflicts with whisper-rs-sys:
# both statically link different ggml versions (LNK2005). The HTTP path
# avoids the conflict entirely and gets GPU offload for free via the user's
# existing Ollama / llama-server / LM Studio install.
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

# Embeddings + history (P3 W7)
# rusqlite bundled SQLite + FTS5 for lexical search. Embeddings come from
# Ollama (or any OpenAI-compat /v1/embeddings endpoint) so no embedding
# model gets bundled in the binary. Semantic search via brute-force cosine
# in Rust over BLOB-stored f32 vectors — fine for sub-10k entries; swap in
# sqlite-vec / vec0 in a later phase when histories actually grow.
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
rusqlite_migration = { version = "2", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Injector (P1 W3)
enigo = { version = "0.6", optional = true }
arboard = { version = "3", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
  "NSRunningApplication",
  "NSWorkspace",
  "libc",
] }

# Accessibility API for the post-paste learning coordinator. Reads the
# focused text field's value via AXUIElement / kAXValueAttribute. Same
# permission scope as the existing `enigo` paste injection (already
# granted), so no additional TCC prompt.
accessibility = "0.2"
accessibility-sys = "0.2"
core-foundation = "0.10"

# Auto-enable Whisper Metal backend on Apple Silicon. The base whisper-rs
# declaration above carries no GPU features; this target-specific override
# adds `metal` only when compiling for aarch64-apple-darwin. Cargo merges
# feature lists across `[dependencies]` and `[target.*.dependencies]`
# blocks, so this is additive — no effect on Intel Macs (which still use
# CPU unless the user opts in via `--features gpu-metal`), Windows, or
# Linux. Net effect: `pnpm dev` on M-series produces a 5–15× faster STT
# build out of the box without the user remembering a feature flag.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
whisper-rs = { version = "0.16", optional = true, features = ["metal"] }

[dev-dependencies]
mockall = "0.13"
proptest = "1.6"
insta = { version = "1.46", features = ["yaml", "redactions"] }
rstest = "0.23"
tempfile = "3"
serial_test = "3"
approx = "0.5"
assert_matches = "1.5"
